--- a/index.html
+++ b/index.html
@@ -1,10 +1,2 @@
-<center><h1>Fqurth.net<h1>
-
-  
-  
-  
-  
-  
-  
-  
-  </center>
+<head>
+<meta name="cf-2fa-verify" content="hYj6WZ6HSp04KXXQ6ow5gZfhLHGDz7">
