--- a/index.html
+++ b/index.html
@@ -1,2 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta name="cf-2fa-verify" content="hYj6WZ6HSp04KXXQ6ow5gZfhLHGDz7">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Error - Page Not Found</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 50px;
+        }
+
+        h1 {
+            font-size: 72px;
+            margin: 0;
+            color: #e74c3c;
+        }
+
+        p {
+            font-size: 24px;
+            color: #333;
+        }
+
+        a {
+            text-decoration: none;
+            color: #3498db;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>404 Error</h1>
+        <p>Sorry, the page you are looking for could not be found.</p>
+        <p>Return to <a href="/">Home Page</a></p>
+    </div>
+</body>
+</html>
