--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="cf-2fa-verify" content="5gr9wfOvSHgQCVxlbZgz">
     <title>404 Error - Page Not Found</title>
     <style>
         body {
