--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>404 Error</h1>
-        <p>Sorry, the page you are looking for could not be found.</p>
-        <p>Return to <a href="/">Home Page</a></p>
+        <h1>CloudFlare Metatag Verificaton</h1>
+        <p>I put the Metatag in the HTML code as needed.</p>
     </div>
 </body>
 </html>
